--- a/main.css
+++ b/main.css
@@ -1,4 +1,34 @@
 html {
     background-color: black;
     color: white;
+    padding: 0;
+}
+body {
+    margin: 0;
+}
+
+.header {
+    background-color: black;
+    height: 100px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    border-bottom: 4px grey solid;
+}
+
+.gradient {
+    background-image: linear-gradient(grey, black);
+    height: 25px;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.icon {
+    width: 75px;
+    display: block;
+    margin: auto;
 }
